# delaunay_triangulation

./: .gitignore  CMakeLists.txt  delaunay_triangulation.cpp  generate_input.py
data/: input.xyz  input100.xyz  input1000.xyz  input10000.xyz
